--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -33,7 +33,6 @@
         //    pc = setTimeout(closes, 1000);
         //}
     </script>
-
 </head>
 <body>
     @*<div id='Loading' style="position:absolute;z-index:1000;top:0px;left:0px;width:100%;height:100%;background:#DDDDDB url('style/images/bodybg.jpg');text-align:center;padding-top: 20%;"><h1><font color="#15428B">加载中···</font></h1></div>*@
@@ -56,14 +55,14 @@
                     <a href="javascript:void(0)">报关操作</a>
                     <ul>
                         @*<li><a href="/Declare/AirIn_List"><i class="iconfont">&#xe616;</i> 空运进口</a></li>
-                        <li><a href="/Declare/AirOut_List"><i class="iconfont">&#xe616;</i> 空运出口</a></li>
-                        <li><a href="/Declare/LandIn_List"><i class="iconfont">&#xe618;</i> 陆运进口</a></li>
-                        <li><a href="/Declare/LandOut_List"><i class="iconfont">&#xe618;</i> 陆运出口</a></li>
-                        <li><a href="/Declare/SeaIn_List"><i class="iconfont">&#xe617;</i> 海运进口</a></li>
-                        <li><a href="/Declare/SeaOut_List"><i class="iconfont">&#xe617;</i> 海运出口</a></li>
-                        <li><a href="/Declare/DomesticKnot_List"><i class="iconfont">&#xe60e;</i> 国内结转</a></li>
-                        <li><a href="/Declare/OverlayBonded_List"><i class="iconfont">&#xe619;</i> 叠加保税</a></li>
-                        <li><a href="/Declare/SpecialSupervision_List"><i class="iconfont">&#xe61a;</i> 特殊监管</a></li>*@
+                            <li><a href="/Declare/AirOut_List"><i class="iconfont">&#xe616;</i> 空运出口</a></li>
+                            <li><a href="/Declare/LandIn_List"><i class="iconfont">&#xe618;</i> 陆运进口</a></li>
+                            <li><a href="/Declare/LandOut_List"><i class="iconfont">&#xe618;</i> 陆运出口</a></li>
+                            <li><a href="/Declare/SeaIn_List"><i class="iconfont">&#xe617;</i> 海运进口</a></li>
+                            <li><a href="/Declare/SeaOut_List"><i class="iconfont">&#xe617;</i> 海运出口</a></li>
+                            <li><a href="/Declare/DomesticKnot_List"><i class="iconfont">&#xe60e;</i> 国内结转</a></li>
+                            <li><a href="/Declare/OverlayBonded_List"><i class="iconfont">&#xe619;</i> 叠加保税</a></li>
+                            <li><a href="/Declare/SpecialSupervision_List"><i class="iconfont">&#xe61a;</i> 特殊监管</a></li>*@
                         <li><a href="/Declare/OnelineIn_List"><i class="iconfont">&#xe61a;</i> 一线进口</a></li>
                         <li><a href="/Declare/OnelineOut_List"><i class="iconfont">&#xe61a;</i> 一线出口</a></li>
                         <li><a href="/Declare/DomesticBlc_List"><i class="iconfont">&#xe61a;</i> 结转BLC</a></li>
@@ -74,36 +73,34 @@
                     <a href="javascript:void(0)">报检操作</a>
                     <ul>
                         @*<li><a href="/Inspect/AirIn_List"><i class="iconfont">&#xe616;</i> 空运进口</a></li>
-                        <li><a href="/Inspect/AirOut_List"><i class="iconfont">&#xe616;</i> 空运出口</a></li>
-                        <li><a href="/Inspect/LandIn_List"><i class="iconfont">&#xe618;</i> 陆运进口</a></li>
-                        <li><a href="/Inspect/LandOut_List"><i class="iconfont">&#xe618;</i> 陆运出口</a></li>
-                        <li><a href="/Inspect/SeaIn_List"><i class="iconfont">&#xe617;</i> 海运进口</a></li>
-                        <li><a href="/Inspect/SeaOut_List"><i class="iconfont">&#xe617;</i> 海运出口</a></li>*@
+                            <li><a href="/Inspect/AirOut_List"><i class="iconfont">&#xe616;</i> 空运出口</a></li>
+                            <li><a href="/Inspect/LandIn_List"><i class="iconfont">&#xe618;</i> 陆运进口</a></li>
+                            <li><a href="/Inspect/LandOut_List"><i class="iconfont">&#xe618;</i> 陆运出口</a></li>
+                            <li><a href="/Inspect/SeaIn_List"><i class="iconfont">&#xe617;</i> 海运进口</a></li>
+                            <li><a href="/Inspect/SeaOut_List"><i class="iconfont">&#xe617;</i> 海运出口</a></li>*@
                         <li><a href="/Inspect/DomesticKnot_List"><i class="iconfont">&#xe60e;</i> 国内业务</a></li>
                         <li><a href="/Inspect/OnelineIn_List"><i class="iconfont">&#xe60e;</i> 一线进口</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:void(0)">场站查询</a> 
-                     <ul>
-                       <li><a href="/Stationquery/Carcardquery"><i class="iconfont">&#xe60e;</i> 车卡查询</a></li>
-                     </ul>
+                    <a href="javascript:void(0)">场站查询</a>
+                    <ul>
+                        <li><a href="/Stationquery/Carcardquery"><i class="iconfont">&#xe60e;</i> 车卡查询</a></li>
+                    </ul>
                 </li>
-
                 <li>
                     <a href="javascript:void(0)">异常管理</a>
                     <ul>
                         <li><a href="/Abnormalmodule/Abnormallog"><i class="iconfont">&#xe60e;</i>异常登记</a></li>
                     </ul>
                 </li>
-
                 @*<li>
-                    <a href="javascript:void(0)">退单管理</a>
-                    <ul>
-                        <li><a href="/Retreatorder/BackOrder_List">退单管理</a></li>
-                        <li><a href="/Retreatorder/SignOrder_List">签收操作</a></li>
-                    </ul>
-                </li>*@
+                        <a href="javascript:void(0)">退单管理</a>
+                        <ul>
+                            <li><a href="/Retreatorder/BackOrder_List">退单管理</a></li>
+                            <li><a href="/Retreatorder/SignOrder_List">签收操作</a></li>
+                        </ul>
+                    </li>*@
                 <li>
                     <a href="javascript:void(0)">后台管理</a>
                     <ul>
@@ -116,11 +113,9 @@
                 </li>
             </ul>
         </div>
-
         <div style="text-align:right;height:30px;line-height:30px;">
             @ViewData["crumb"]
         </div>
-
     </div>
     <div class="container" style="min-height:600px;">
         @RenderSection("featured", required: false)
@@ -128,6 +123,7 @@
             @RenderBody()
         </section>
     </div>
+    <div id="mainWin" style="display:none"></div>
     <div style="background-color: #CFDEFF; height: 70px;width:100%;margin-top:10px; ">
         <div class="container">
             <table class="table" style="margin-bottom:0px">
@@ -164,4 +160,3 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
- 
