--- a/Views/Declare/DomesticBlc_Edit.cshtml
+++ b/Views/Declare/DomesticBlc_Edit.cshtml
@@ -39,26 +39,7 @@
                     <input class="easyui-textbox" type="text" value="@ViewData["BUSIUNITNAME"]" disabled="disabled" />
                 </td>
             </tr>
-            <tr>
-                <td>
-                    <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
-                </td>
-                <td>
-                    <label for="SHIWUFANGXINGUSERNAME">实物放行人:</label>
-                    <input class="easyui-textbox " type="text" id="SHIWUFANGXINGUSERNAME" name="SHIWUFANGXINGUSERNAME" disabled="disabled" />
-                </td>
-                <td>
-                    <label for="DANZHENGFANGXINGTIME"> 单证放行时间:</label>
-                    <input class="easyui-textbox time_input" type="text" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
-                </td>
-                <td>
-                    <label for="DANZHENGFANGXINGUSERNAME">单证放行人:</label>
-                    <input class="easyui-textbox " type="text" id="DANZHENGFANGXINGUSERNAME" name="DANZHENGFANGXINGUSERNAME" disabled="disabled" />
-                </td>
-            </tr>
+
             <tr>
                 <td>
                     <label for="GUANWUJIESHOUTIME"> 关务接受时间:</label>
@@ -141,6 +122,27 @@
             </tr>
             <tr>
                 <td>
+                    <label for="DANZHENGFANGXINGTIME"> 单证放行时间:</label>
+                    <input class="easyui-textbox time_input" type="text" id="DANZHENGFANGXINGTIME" name="DANZHENGFANGXINGTIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="DANZHENGFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                </td>
+                <td>
+                    <label for="DANZHENGFANGXINGUSERNAME">单证放行人:</label>
+                    <input class="easyui-textbox " type="text" id="DANZHENGFANGXINGUSERNAME" name="DANZHENGFANGXINGUSERNAME" disabled="disabled" />
+                </td>
+                <td>
+                    <label for="SHIWUFANGXINGTIME">实物放行时间:</label>
+                    <input class="easyui-textbox time_input" type="text" id="SHIWUFANGXINGTIME" name="SHIWUFANGXINGTIME" disabled="disabled" />
+                    <a href="javascript:void(0)" datatype="SHIWUFANGXING" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                </td>
+                <td>
+                    <label for="SHIWUFANGXINGUSERNAME">实物放行人:</label>
+                    <input class="easyui-textbox " type="text" id="SHIWUFANGXINGUSERNAME" name="SHIWUFANGXINGUSERNAME" disabled="disabled" />
+                </td>
+            </tr>
+
+            <tr>
+                <td>
                     <label for="CONTRACTNO"> 合同发票号:</label>
                     <input class="easyui-textbox" type="text" name="CONTRACTNO" disabled="disabled" />
                 </td>
@@ -151,11 +153,15 @@
                     <div style="float:left">
                         <label for="zhengchang">正常放行:</label>
                         <input class="" id="zhengchang" type="checkbox" value="1" name="PASSMODE" />
+
+                        <label for="chayan">查验放行:</label>
+                        <input class="" id="chayan" type="checkbox" value="2" name="PASSMODE" />
+
                     </div>
                 </td>
                 <td style="text-align:left">
                     <label for="IFYIJIAO">是否移交:</label>
-                    <input class="" id="shifyijiao" type="checkbox" name="IFYIJIAO" value="1" />
+                    <input class="" id="IFYIJIAO" type="checkbox" name="IFYIJIAO" value="1" />
                 </td>
             </tr>
             <tr>
@@ -171,7 +177,7 @@
                 </td>
                 <td style="text-align:left">
                     <label for="KOUHUOSIGN">扣货标识:</label>
-                    <input class="" id="kouhuobiaoshi" type="checkbox" name="KOUHUOSIGN" value="1" />
+                    <input class="" id="KOUHUOSIGN" type="checkbox" name="KOUHUOSIGN" value="1" />
                 </td>
                 <td>
                     <label for="KOUHUOTIME" style="width:100px;">扣货时间:</label>
@@ -181,7 +187,7 @@
             <tr>
                 <td style="text-align:left">
                     <label for="IFSHANDAN">是否删单:</label>
-                    <input class="" id="shifshandan" type="checkbox" name="IFSHANDAN" value="1" />
+                    <input class="" id="IFSHANDAN" type="checkbox" name="IFSHANDAN" value="1" />
                 </td>
                 <td>
                     <label for="SHANDANTOTAL">删单次数:</label>
@@ -196,7 +202,7 @@
             <tr>
                 <td style="text-align:left">
                     <label for="IFGAIDAN">是否改单:</label>
-                    <input class="" id="shifgaidan" type="checkbox" name="IFGAIDAN" value="1" />
+                    <input class="" id="IFGAIDAN" type="checkbox" name="IFGAIDAN" value="1" />
                 </td>
                 <td>
                     <label for="GAIDANTOTAL">改单次数:</label>
@@ -211,7 +217,7 @@
             <tr>
                 <td style="text-align:left">
                     <label for="IFCHAYAN">是否查验:</label>
-                    <input class="" id="shifjiancha" type="checkbox" name="IFCHAYAN" value="1" />
+                    <input class="" id="IFCHAYAN" type="checkbox" name="IFCHAYAN" value="1" />
                 </td>
                 <td>
                     <label for="CHAYANTIMES">查验次数:</label>
@@ -230,18 +236,23 @@
             <tr>
                 <td style="text-align:left">
                     <label for="IFTIAODANG">是否调档:</label>
-                    <input class="" id="shifdiaodang" type="checkbox" name="IFTIAODANG" value="1" />
+                    <input class="" id="IFTIAODANG" type="checkbox" name="IFTIAODANG" value="1" />
                 </td>
                 <td>
                     <label for="TIAODANGTIMES">调档次数:</label>
                     <input class="easyui-numberspinner" name="TIAODANGTIMES"
                            data-options="min:0">
                 </td>
-
             </tr>
         </table>
     </div>
     <div style="text-align:center;padding:5px 0">
+        <a class="btn btn-primary" href="javascript:void(0)" onclick="BaoguandanInfo()">
+            报关单信息
+        </a>
+        <a class="btn btn-primary" href="javascript:void(0)" onclick="JizhuangxiangInfo()">
+            集装箱信息
+        </a>
         <a class="btn btn-primary" href="javascript:void(0)" onclick="submitForm()">
             <i class="fa fa-floppy-o"></i> 保存
         </a>
@@ -250,26 +261,7 @@
         </a>
     </div>
 </form>
-
-<div id="" class="easyui-panel" title="报关单信息"
-     data-options="collapsible:true">
-    <table id="dg" style="height:250px" class="easyui-datagrid"
-           data-options=" rownumbers:true,
-                                   dataType : 'json',
-                                   method:'get'">
-        <thead>
-            <tr>
-                <th data-options="field: 'ck', checkbox: true"></th>
-                <th data-options="field:'BUSIUNITNAME',sortable:true,width:200,align:'center'">报关单号</th>
-                <th data-options="field:'CONTRACTNO',width:100,align:'center'">发票合同号</th>
-                <th data-options="field:'DIVIDENO',width:100,align:'center'">贸易方式</th>
-                <th data-options="field:'GOODSNUM',width:50,align:'center'">件数</th>
-                <th data-options="field:'GOODSWEIGHT',width:50,align:'center'">重量</th>
-                <th data-options="field:'DECLSHEETNUM',width:100,align:'center'">海关通关状态</th>
-            </tr>
-        </thead>
-    </table>
-</div>
+ 
 
 <script type="text/javascript">
     Edit();
