--- a/Views/Inspect/OnelineIn_Edit.cshtml
+++ b/Views/Inspect/OnelineIn_Edit.cshtml
@@ -63,12 +63,8 @@
                     <input class="easyui-textbox" type="text" name="CODE" disabled="disabled" />
                 </td>
                 <td>
-                    <label for="name">报检单号:</label>
-                    <input class="easyui-textbox" type="text" name="" disabled="disabled" />
-                </td>
-                <td>
                     <label for="">收货人:</label>
-                    <input class="easyui-textbox" type="text" name="" disabled="disabled" />
+                    <input class="easyui-textbox" type="text" name="SFGOODSUNIT" disabled="disabled" />
                 </td>
                 <td>
                     <label for="CONTRACTNO"> 合同/发票号:</label>
@@ -93,8 +89,8 @@
                     <input class="easyui-textbox" type="text" name="SECONDLADINGBILLNO" disabled="disabled" />
                 </td>
             </tr>
-         
- 
+
+
 
         </table>
     </div>
@@ -106,7 +102,7 @@
                 <td>
                     <label for="BAOJIANTIME"> 报检时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="BAOJIANTIME" name="BAOJIANTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="BAOJIAN" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <a href="javascript:void(0)" datatype="BAOJIAN" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="BAOJIANUSERNAME">报检人:</label>
@@ -148,7 +144,7 @@
                 <td>
                     <label for="CHAYANZHILINGXIAFATIME"> 查验时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="CHAYANZHILINGXIAFATIME" name="CHAYANZHILINGXIAFATIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="CHAYANZHILINGXIAFA" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <a href="javascript:void(0)" datatype="CHAYANZHILINGXIAFA" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="CHAYANZHILINGXIAFAUSERNAME">查验人:</label>
@@ -169,7 +165,7 @@
                 <td>
                     <label for="XUNZHENGTIME">熏蒸时间:</label>
                     <input class="easyui-textbox time_input" type="text" id="XUNZHENGTIME" name="XUNZHENGTIME" disabled="disabled" />
-                    <a href="javascript:void(0)" datatype="XUNZHENG" class="easyui-linkbutton fillingData"><i class="icon-time"></i></a>
+                    <a href="javascript:void(0)" datatype="XUNZHENG" class="easyui-linkbutton fillingData INSPSTATUS"><i class="icon-time"></i></a>
                 </td>
                 <td>
                     <label for="XUNZHENGUSERNAME">熏蒸人:</label>
@@ -200,7 +196,7 @@
                     <label for="">查验备注:</label>
                     <input class="easyui-textbox" type="text" name="CHAYANREMARK" />
                 </td>
-                <td >
+                <td>
                     <label>查验类别:</label>
                     <select class="easyui-combobox" name="CHAYANTYPE">
                         <option value="">请选择</option>
@@ -225,6 +221,18 @@
                     <label for="SHANDANDESC">删单备注:</label>
                     <input class="easyui-textbox" name="SHANDANDESC">
                 </td>
+
+                <td>
+                    <label for="INSPSTATUS">报检状态:</label>
+                    @*<select class="easyui-combobox" name="INSPSTATUS">
+                        <option value="">请选择</option>
+                        <option value="报检">报检</option>
+                        <option value="木托">查验</option>
+                        <option value="熏蒸">熏蒸</option>
+                    </select>*@
+
+                    <input class="easyui-textbox" name="INSPSTATUS" id="INSPSTATUS" disabled="disabled">
+                </td>
             </tr>
 
             <tr>
@@ -238,7 +246,7 @@
                            data-options="min:0">
                 </td>
                 <td>
-                    <label for="GAIDANDESC">删单备注:</label>
+                    <label for="GAIDANDESC">改单备注:</label>
                     <input class="easyui-textbox" name="GAIDANDESC">
                 </td>
             </tr>
@@ -247,38 +255,34 @@
     </div>
 
     <div style="text-align:center;padding:5px 0">
+        <a class="btn btn-primary" href="javascript:void(0)" onclick="TongguandanInfo()">
+            通关单信息
+        </a>
+        <a class="btn btn-primary" href="javascript:void(0)" onclick="JizhuangxiangInfo()">
+            集装箱信息
+        </a>
         <a class="btn btn-primary" href="javascript:void(0)" onclick="submitForm()">
             <i class="fa fa-floppy-o"></i> 保存
         </a>
-
         <a class="btn btn-primary" href="javascript:void(0)" onclick="javascript: history.back(-1);">
             <i class="icon-reply"></i> 返回
         </a>
     </div>
 </form>
 
-<div id="" class="easyui-panel" title="通关单信息"
-     data-options="collapsible:true">
-
-    <table id="dg" style="height:250px" class="easyui-datagrid"
-           data-options=" rownumbers:true,
-                                   dataType : 'json',
-                                   method:'get'">
-        <thead>
-            <tr>
-                <th data-options="field: 'ID', checkbox: true"></th>
-                <th data-options="field:'BUSIUNITNAME,sortable:true'">通关单号</th>
-                <th data-options="field:'TOTALNO,sortable:true'">报检单号</th>
-                <th data-options="field:'DIVIDENO,sortable:true'">总件数</th>
-                <th data-options="field:'GOODSWEIGHT,sortable:true'">总重量</th>
-                <th data-options="field:'DECLSHEETNUM,sortable:true'">通关单张数</th>
-                <th data-options="field:'DECLSHEETNUM,sortable:true'">报检状态</th>
-            </tr>
-        </thead>
-    </table>
-</div>
-
-
 <script type="text/javascript">
     Edit();
+
+    $(function () {
+        $('.INSPSTATUS').click(function () {
+            var type = this.getAttribute("datatype");
+            if (type == 'BAOJIAN') {
+                $("#INSPSTATUS").textbox('setValue', '报检');
+            } else if (type == 'CHAYANZHILINGXIAFA') {
+                $("#INSPSTATUS").textbox('setValue', '查验');
+            } else if (type == 'XUNZHENG') {
+                $("#INSPSTATUS").textbox('setValue', '熏蒸');
+            }
+        })
+    })
 </script>
